# investee

./: .gitignore  Makefile  README.md  compose.yaml
docker/: Dockerfile  build-entrypoint.sh  investee-entrypoint.sh  svc-log-entrypoint.sh
src/SCP-firmware/module/scmi_perf/test/fastchannels/: mod_scmi_perf_fch.cmake
src/SCP-firmware/product/synquacer/module/hsspi/: CMakeLists.txt
src/hafnium/test/vmapi/arch/aarch64/: smccc.c
src/hafnium/test/vmapi/arch/aarch64/gicv3/: manifest.dts
src/hafnium/test/vmapi/common/: BUILD.gn
src/linux/arch/arm/boot/dts/st/: stm32mp151.dtsi  stm32mp157c-dk2.dts  stm32mp157c-ed1.dts  stm32mp15xx-dhcom-som.dtsi  stm32mp15xx-dhcor-som.dtsi
src/linux/arch/arm64/boot/dts/arm/: foundation-v8.dtsi  (+2 more)
src/linux/arch/arm64/kernel/: entry-common.c  syscall.c
src/linux/drivers/tee/: tee_core.c
src/linux/drivers/tee/optee/: ffa_abi.c  optee_private.h  smc_abi.c
src/optee_examples/investee/: Android.mk  CMakeLists.txt
src/optee_examples/investee/host/: Makefile  main.c
src/optee_examples/investee/ta/include/: pta_investee.h
src/optee_os/core/arch/arm/kernel/: thread_optee_smc.c
src/optee_os/core/arch/arm/mm/: mobj_dyn_shm.c
src/optee_os/core/kernel/: tee_ta_manager.c
src/optee_os/core/mm/: core_mmu.c
src/optee_os/core/pta/: investee.c  sub.mk
src/optee_os/core/pta/investee_util/: ptw.c  ptw.h
src/optee_os/core/tee/: entry_std.c
src/trusted-firmware-a/services/spd/opteed/: opteed_main.c
src/u-boot/lib/efi_selftest/: efi_miniapp_file_image_exception.h  efi_miniapp_file_image_exit.h  efi_miniapp_file_image_return.h
(+4 files in other folders)
