# Copyright 2019 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/image/image.gni")

source_set("ffa") {
  testonly = true
  public_configs = [ "//test/hftest:hftest_config" ]
  sources = [ "ffa.c" ]
  include_dirs = [ "//src/arch/aarch64" ]
}
